# terminalpolyominos

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
packaging/appimage/: AppRun  build.sh  terminalpolyominos.desktop  terminalpolyominos.metainfo.xml
packaging/macos/: build.sh
src/: main.cpp
src/app/: App.cpp  App.hpp  SettingsMenu.cpp  SettingsMenu.hpp
src/game/: Bag.cpp  Bag.hpp  Board.cpp  Board.hpp  Game.cpp  Game.hpp  Piece.cpp  Piece.hpp  ShapeGen.cpp  ShapeGen.hpp  SrsKicks.cpp  SrsKicks.hpp  Types.hpp
src/input/: Input.cpp  Input.hpp
src/render/: Renderer.cpp  Renderer.hpp
src/terminal/: Keys.cpp  Keys.hpp  Terminal.cpp  Terminal.hpp
src/util/: HighScores.cpp  HighScores.hpp  Settings.cpp  Settings.hpp  Xdg.cpp  Xdg.hpp
tests/: test_assert.hpp  test_game.cpp  test_input.cpp  test_scores.cpp  test_settings.cpp  test_settings_menu.cpp
